Archive2/15/b355c3fd5e7c32/output
main.cpp:3:10: error: 'vector' in namespace 'std' does not name a template type
     std::vector<std::vector<Color> >
          ^
main.cpp:30:34: error: variable or field 'mandelbrot_portion' declared void
     void mandelbrot_portion(std::vector<std::vector<Color> > const & image,
                                  ^
main.cpp:30:29: error: 'vector' is not a member of 'std'
     void mandelbrot_portion(std::vector<std::vector<Color> > const & image,
                             ^
main.cpp:30:41: error: 'vector' is not a member of 'std'
     void mandelbrot_portion(std::vector<std::vector<Color> > const & image,
                                         ^
main.cpp:30:53: error: 'Color' was not declared in this scope
     void mandelbrot_portion(std::vector<std::vector<Color> > const & image,
                                                     ^
main.cpp:30:60: error: expected primary-expression before '>' token
     void mandelbrot_portion(std::vector<std::vector<Color> > const & image,
                                                            ^
main.cpp:30:62: error: expected primary-expression before 'const'
     void mandelbrot_portion(std::vector<std::vector<Color> > const & image,
                                                              ^
main.cpp:31:29: error: expected primary-expression before 'const'
                             const int MIN_X, const int MIN_Y,
                             ^
main.cpp:31:46: error: expected primary-expression before 'const'
                             const int MIN_X, const int MIN_Y,
                                              ^
main.cpp:32:29: error: expected primary-expression before 'const'
                             const int y_start, const int y_end,
                             ^
main.cpp:32:48: error: expected primary-expression before 'const'
                             const int y_start, const int y_end,
                                                ^
main.cpp:33:29: error: expected primary-expression before 'const'
                             const int xScale, const int yScale,
                             ^
main.cpp:33:47: error: expected primary-expression before 'const'
                             const int xScale, const int yScale,
                                               ^
main.cpp:34:31: error: expected primary-expression before 'const'
                             F const & color)
                               ^
